--- a/css/aboutus_gallery.css
+++ b/css/aboutus_gallery.css
@@ -108,6 +108,7 @@
     
     .choices__item:first-child {
         color: var(--color-white);
+        opacity: unset;
     }
     
     .choices__item:first-child::after {
@@ -159,6 +160,8 @@
         min-height: 40px;
         display: flex;
         align-items: center;
+        color: var(--color-grey);
+        opacity: unset;
     }
     
     .choices__item:nth-child(3) {
@@ -166,6 +169,8 @@
         min-height: 40px;
         display: flex;
         align-items: center;
+        color: var(--color-grey);
+        opacity: unset;
     }
     /* right gallery */
     
@@ -287,7 +292,7 @@
     }
     
     .gallery-slide {
-        background-color: grey;
+        background-color: var(--color-grey);
         position: relative;
         cursor: pointer;
         height: calc((100% - 50px) / 2);
@@ -302,7 +307,7 @@
         left: 25px;
         background-color: rgba(0, 0, 0, 0.5);
         background-image: url(../img/ховер/галерея.png);
-        background-size: 100%;
+        background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         z-index: -1;
@@ -329,8 +334,9 @@
     }
     
     .swiper-slide-img {
-        width: 100%;
         height: 100%;
+        width: 100%;
+        object-fit: cover;
     }
     /* popup */
     
@@ -517,6 +523,16 @@
         color: var(--color-active);
     }
     
+    @media (max-width:1700px) {
+        .gallery-slide {
+            height: calc(350px - (1700px - 100vw)*0.228);
+        }
+        .swiper-right-content .swiper-wrapper {
+            height: calc(750px - (1700px - 100vw)*0.4);
+            ;
+        }
+    }
+    
     @media (max-width:1300px) {
         .section-gallery__container {
             max-width: 1026px;
@@ -554,22 +570,38 @@
         }
     }
     
+    @media (max-width:1015px) {
+        .gallery-slide {
+            height: calc(280px - (1015px - 100vw)*0.32);
+        }
+        .swiper-right-content .swiper-wrapper {
+            height: calc(590px - (1015px - 100vw)*0.5);
+        }
+    }
+    
     @media (max-width:885px) {
         .section-gallery__container {
             justify-content: unset;
             flex-direction: column;
             position: relative;
             padding-bottom: 85px;
+            max-width: 769px;
         }
         .info-moreinfo {
-            max-width: 668px;
             position: absolute;
             padding: 0;
             bottom: 70px;
+            max-width: 668px;
         }
         .gallery-info {
-            margin-bottom: 108px;
+            margin-bottom: 48px;
             width: 42%;
+        }
+        .choices__list--dropdown {
+            z-index: 2;
+        }
+        .choices__list--dropdown .choices__item {
+            background-color: rgba(0, 0, 0, 1);
         }
         .wrapper-gallery {
             padding-top: 0px;
@@ -580,10 +612,13 @@
             margin-bottom: 30px;
         }
         .swiper-right-content .swiper-wrapper {
-            height: 594px
+            height: 594px;
         }
         .gallery-slide {
             height: calc((100% - 34px) / 2)
+        }
+        .swiper-slide-img {
+            object-fit: unset;
         }
         .popup__content {
             max-width: 668px;
@@ -593,5 +628,102 @@
         }
         .popup__information {
             padding: 126px 36px 108px 49px;
+        }
+    }
+    
+    @media (max-width:650px) {
+        .section-aboutus {
+            margin-bottom: 42px;
+        }
+        .title {
+            margin-bottom: 13px;
+            font-size: 28px;
+        }
+        .text {
+            font-size: 14px;
+            line-height: 28px;
+        }
+        .section-gallery__container {
+            padding-left: 15px;
+            padding-right: 15px;
+            padding-top: 52px;
+            padding-bottom: 140px;
+        }
+        .info-header {
+            margin-bottom: 22px;
+            font-size: 28px;
+        }
+        .gallery-info {
+            margin-bottom: 38px;
+            width: 50%;
+            min-width: 290px;
+        }
+        .info-filter {
+            margin-bottom: 10px;
+        }
+        .wrapper-gallery {
+            display: flex;
+            flex-direction: column-reverse;
+            align-items: center;
+        }
+        .swiper-pagination-right {
+            padding-left: 13px;
+            padding-right: 13px;
+        }
+        .swiper-right-btns {
+            margin-bottom: unset;
+        }
+        .swiper-right-content .swiper-wrapper {
+            margin-bottom: 20px;
+            height: 367px;
+            max-width: 290px;
+        }
+        .gallery-slide {
+            height: 100%;
+            width: 100%;
+        }
+        .info-moreinfo {
+            max-width: 90%;
+            bottom: 40px;
+        }
+        .section-gallery {
+            margin-bottom: 52px;
+        }
+        .popup__content {
+            flex-direction: column;
+            max-width: 290px;
+        }
+        .popup__picture {
+            min-width: 290px;
+            height: 200px;
+        }
+        .popup__information {
+            padding: 17px 21px 26px 20px;
+        }
+        /* hover */
+        .swiper-btn-prev:hover::after,
+        .swiper-btn-next:hover::after {
+            background: rgba(102, 102, 102, 1);
+        }
+        .swiper-btn-prev:active::after,
+        .swiper-btn-next:active::after {
+            background: var(--color-active);
+            border: 1px solid var(--color-dark);
+        }
+        .gallery-slide:hover::after {
+            z-index: 0;
+            opacity: 0;
+        }
+        .choices__inner:hover {
+            background-color: transparent;
+        }
+        .choices__inner:active {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+        .moreinfo-identification:hover {
+            color: var(--color-purple);
+        }
+        .moreinfo-identification:active {
+            color: var(--color-active);
         }
     }
