--- a/css/catalog.css
+++ b/css/catalog.css
@@ -76,22 +76,27 @@
        
        .catalog-tabs1 {
            background: url(../img/каталог/франция.png) no-repeat;
+           background-size: cover;
        }
        
        .catalog-tabs2 {
            background: url(../img/каталог/германия.png) no-repeat;
+           background-size: cover;
        }
        
        .catalog-tabs3 {
            background: url(../img/каталог/италия.png) no-repeat;
+           background-size: cover;
        }
        
        .catalog-tabs4 {
            background: url(../img/каталог/россия.png) no-repeat;
+           background-size: cover;
        }
        
        .catalog-tabs5 {
            background: url(../img/каталог/испания.png) no-repeat;
+           background-size: cover;
        }
        
        .tabs-content-allpainters {
@@ -175,9 +180,6 @@
            font-size: 12px;
            color: #999999;
        }
-       /* .allpainters-painterbiography {
-       max-width: 749px;
-   } */
        /* accordion */
        
        #ui-id-2 {
@@ -198,7 +200,7 @@
            display: flex;
            padding: 43px 0px 43px 0px;
            border: none;
-           border-top: 1px solid var(--color-dark);
+           border-top: 1px solid var(--color-grey2);
            font-family: 'OpenSans';
            font-weight: 600;
            font-size: 24px;
@@ -217,15 +219,12 @@
        #ui-id-56,
        #ui-id-69,
        #ui-id-70 {
-           border-bottom: 1px solid var(--color-dark)
+           border-bottom: 1px solid var(--color-grey2)
        }
        
        .ui-accordion .ui-accordion-header-active {
-           border-bottom: 1px solid var(--color-dark);
+           border-bottom: 1px solid var(--color-grey2);
        }
-       /* .ui-accordion .ui-accordion-content {
-       padding: 25px 62px 25px 0;
-   } */
        
        .ui-icon {
            background-image: none;
@@ -329,15 +328,6 @@
            font-weight: 400;
            font-size: 16px;
        }
-       /* .item1,
-   .item2 {
-       grid-column: 1/span 1;
-   }
-   
-   .item3,
-   .item4 {
-       grid-column: 2/span 1;
-   } */
        
        .interval-accordion-item {
            width: fit-content;
@@ -374,8 +364,6 @@
            color: var(--color-purple);
        }
        /* hover active focus swiper*/
-       /* 
-   hover */
        
        .interval-accordion-header-new,
        .ui-accordion .ui-accordion-header-active,
@@ -413,15 +401,27 @@
            border-bottom: 1px solid var(--color-hover);
        }
        
-       .interval-accordion__header-new:hover+ul+button {
+       .interval-accordion-header-new:hover+ul+button {
+           border-top: 1px solid var(--color-hover);
+       }
+       
+       .interval-accordion-header-new:hover+div+button {
            border-top: 1px solid var(--color-hover);
        }
        
        .ui-accordion .ui-accordion-header-active:hover+ul+button {
-           border-top: 1px solid var(--color-dark);
+           border-top: 1px solid var(--color-grey2);
        }
        
-       .interval-accordion__text:hover+button {
+       .ui-accordion .ui-accordion-header-active:hover+div+button {
+           border-top: 1px solid var(--color-grey2);
+       }
+       
+       .interval-accordion-text:hover+button {
+           border-top: 1px solid var(--color-hover);
+       }
+       
+       .ui-accordion-content:hover+button {
            border-top: 1px solid var(--color-hover);
        }
        
@@ -466,8 +466,16 @@
            border-top: 1px solid var(--color-active);
        }
        
+       .interval-accordion-header-new:focus+div+button {
+           border-top: 1px solid var(--color-active);
+       }
+       
        .ui-accordion .ui-accordion-header-active:focus+ul+button {
-           border-top: 1px solid var(--color-dark);
+           border-top: 1px solid var(--color-grey2);
+       }
+       
+       .ui-accordion .ui-accordion-header-active:focus+div+button {
+           border-top: 1px solid var(--color-grey2);
        }
        
        #ui-id-13:focus,
@@ -526,10 +534,22 @@
        
        @media (max-width:1500px) {
            .interval-accordion-text {
-               padding: 25px 62px 25px 0;
                grid-template-columns: repeat(2, 1fr);
                grid-template-rows: repeat(12, 1fr);
                grid-column-gap: 38px;
+               padding: 25px 62px 25px 0;
+           }
+           .interval-accordion-undef {
+               display: flex;
+               flex-wrap: nowrap;
+               justify-content: flex-start;
+               align-items: center;
+               padding: 37px 0px 37px 12px;
+               overflow: hidden;
+           }
+           .accordion-right {
+               flex-basis: 50%;
+               max-width: unset;
            }
        }
        
@@ -556,10 +576,10 @@
                flex-basis: 47.2%;
            }
            .interval-accordion-text {
-               padding: 25px 0px 25px 0;
                grid-template-columns: repeat(2, 1fr);
                grid-template-rows: repeat(12, 1fr);
                grid-column-gap: unset;
+               padding: 25px 0px 25px 0;
            }
            .interval-accordion-undef {
                flex-wrap: nowrap;
@@ -663,5 +683,144 @@
            .interval-accordion-text {
                grid-template-columns: repeat(2, 1fr);
                grid-template-rows: repeat(12, 1fr);
+           }
+       }
+       
+       @media (max-width:650px) {
+           .section-catalog {
+               margin-bottom: 55px;
+           }
+           .catalog-title {
+               margin-bottom: 12px;
+           }
+           .catalog-tabs-btn {
+               width: 32px;
+               height: 32px;
+           }
+           .catalog-tabs-btn:before {
+               width: 32px;
+               height: 32px;
+           }
+           .catalog-tabs-btn:after {
+               width: 46px;
+               height: 46px;
+               top: -7px;
+               left: -7px;
+           }
+           .catalog-tabs-item:not(:last-child) {
+               padding-right: 32px;
+           }
+           .tabs-content-information {
+               display: none;
+           }
+           .catalog-tabs {
+               margin-bottom: 20px;
+           }
+           .ui-accordion .ui-accordion-header {
+               font-size: 18px;
+               padding: 25px 0px 26px 0px;
+           }
+           .ui-accordion .ui-accordion-header::before {
+               width: 30px;
+               height: 30px;
+               top: 20.35px;
+           }
+           .ui-accordion .ui-accordion-header::after {
+               top: 32px;
+               right: 12px;
+               padding: 3px;
+           }
+           .interval-accordion-text {
+               grid-template-columns: repeat(1, 1fr);
+               grid-template-rows: repeat(24, 1fr);
+               padding: 20px 0px 23px 0;
+           }
+           .allpainters-picture {
+               margin-bottom: 20px;
+               max-width: 100%;
+               height: calc(100vw - 139px);
+           }
+           .allpainters-paintername {
+               margin-bottom: 19px;
+           }
+           .allpainters-painterbiography {
+               max-width: calc(100vw - 32px);
+               font-size: 16px;
+               line-height: 32px;
+           }
+           .interval-accordion-undef {
+               flex-wrap: nowrap;
+               flex-direction: column;
+               padding: 49px 0px 37px 0px;
+               opacity: 1;
+               transition: opacity .5s ease;
+           }
+           .accordion-left {
+               width: calc((100vw - 36px)/1.5 - 15px);
+               margin-bottom: 20px;
+           }
+           .accordion-left::before {
+               width: calc(100vw/1.5 - 15px)
+           }
+           .accordion-right {
+               text-align: center;
+           }
+           /* hover */
+           .painter-link:hover {
+               color: var(--color-purple);
+           }
+           .interval-accordion-header-new:hover {
+               border: 0px solid transparent;
+               color: var(--color-dark);
+               border-top: 1px solid var(--color-grey2);
+           }
+           .ui-accordion .ui-accordion-header:hover {
+               border-top: 1px solid var(--color-grey2);
+               color: var(--color-dark);
+           }
+           .ui-accordion .ui-accordion-header-active:hover {
+               border-top: 1px solid var(--color-grey2);
+               border-bottom: 1px solid var(--color-grey2);
+               color: var(--color-dark);
+           }
+           .interval-accordion-header-new:hover+ul+button {
+               border-top: 1px solid var(--color-grey2);
+           }
+           .interval-accordion-header-new:hover+div+button {
+               border-top: 1px solid var(--color-grey2);
+           }
+           .ui-accordion .ui-accordion-header-active:hover+ul+button {
+               border-top: 1px solid var(--color-grey2);
+           }
+           .ui-accordion .ui-accordion-header-active:hover+div+button {
+               border-top: 1px solid var(--color-grey2);
+           }
+           .interval-accordion-text:hover+button {
+               border-top: 1px solid var(--color-grey2);
+           }
+           .ui-accordion-content:hover+button {
+               border-top: 1px solid var(--color-grey2);
+           }
+           #ui-id-13:hover,
+           #ui-id-14:hover,
+           #ui-id-27:hover,
+           #ui-id-28:hover,
+           #ui-id-41:hover,
+           #ui-id-42:hover,
+           #ui-id-55:hover,
+           #ui-id-56:hover,
+           #ui-id-69:hover,
+           #ui-id-70:hover {
+               border-bottom: 1px solid var(--color-grey2);
+           }
+           .ui-accordion .ui-accordion-header:hover:before {
+               background: rgba(236, 236, 236, 1);
+           }
+           .catalog-tabs-btn:hover {
+               filter: unset;
+           }
+           .interval-accordion-but:hover {
+               color: var(--color-dark);
+               border-bottom: unset;
            }
        }
