--- a/css/edition.css
+++ b/css/edition.css
@@ -1,4 +1,9 @@
-.book-name1024 {
+.book-name1024,
+.book-name320 {
+    display: none;
+}
+
+.author-show320 {
     display: none;
 }
 
@@ -77,8 +82,9 @@
 .edition-check-text::after {
     content: '';
     position: absolute;
-    left: 4.8px;
+    left: 4px;
     top: calc(50% - 4px / 2);
+    bottom: 0;
     width: 4px;
     height: 4px;
     color: var(--color-purple);
@@ -376,13 +382,11 @@
         margin-bottom: 0px;
     }
     .book-name1024 {
+        font-size: 16px;
         display: block;
     }
     .book-hide1024 {
         display: none;
-    }
-    .book-name1024 {
-        display: block;
     }
     .wrapper {
         padding-left: unset;
@@ -396,7 +400,6 @@
     }
     .edition-image {
         padding-bottom: 10px;
-        height: 320px;
         width: 100%;
     }
 }
@@ -432,6 +435,9 @@
     .edition-check:not(:last-child) {
         margin-bottom: 0px;
     }
+    .edition-image {
+        padding-bottom: 7px;
+    }
     .edition-check {
         height: fit-content;
     }
@@ -441,6 +447,12 @@
     .swiper-edition-btns {
         padding-left: unset;
     }
+    .edition-check-text::after {
+        bottom: 0;
+        right: 0;
+        top: 7.873px;
+        left: 4.49888888px;
+    }
 }
 
 @media (max-width:760px) {
@@ -449,5 +461,238 @@
     }
     .edition-type {
         grid-row-gap: 10px;
+    }
+}
+
+@media (max-width:650px) {
+    .section-edition {
+        margin-bottom: 52px;
+    }
+    .section-edition__container {
+        align-items: unset;
+        padding-bottom: 42px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .edition-filter {
+        flex-basis: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .section-edition__container {
+        padding-top: 52px;
+    }
+    .edition-title {
+        margin-bottom: 15px;
+    }
+    .checkbox-edition {
+        position: relative;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-bottom: unset;
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    }
+    .checkbox-edition::after {
+        content: '';
+        position: absolute;
+        top: 40%;
+        right: 2px;
+        width: 7.07px;
+        height: 7.07px;
+        border-right: 1px solid #ffffff;
+        border-bottom: 1px solid #ffffff;
+        transform: rotate(45deg);
+        transition: transform .5s ease;
+    }
+    .edition-type {
+        display: flex;
+        flex-direction: column;
+        grid-row-gap: unset;
+    }
+    .grid-check {
+        grid-row: unset;
+    }
+    .edition-check {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+        width: unset;
+    }
+    .edition-check-text::before {
+        top: 10px;
+    }
+    .check320 {
+        display: inline-block;
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        right: -2px;
+    }
+    .check320::after {
+        content: "";
+        position: absolute;
+        transform: rotate(45deg);
+        top: 8px;
+        height: 1px;
+        transition: 0.4s;
+        background: var(--color-purple);
+        width: 100%;
+        opacity: 0;
+    }
+    .check320::before {
+        content: "";
+        position: absolute;
+        transform: rotate(-45deg);
+        top: 8px;
+        height: 1px;
+        transition: 0.4s;
+        background: var(--color-purple);
+        width: 100%;
+        opacity: 0;
+    }
+    .design320.is-closed-design320 {
+        display: none;
+    }
+    .hide320 {
+        display: none;
+    }
+    .edition-cheking:checked~.check320::after,
+    .edition-cheking:checked~.check320::before {
+        opacity: 1;
+    }
+    .hide320.is-active320 {
+        display: block;
+        animation-name: dropdownOpen;
+        animation-duration: .5s;
+    }
+    .hide320.is-closed320 {
+        display: block;
+        animation-name: dropdownClose;
+        animation-duration: .5s;
+    }
+    .hide320.is-closedfinal320 {
+        display: none;
+    }
+    .active-arrow320::after {
+        top: 45%;
+        transform: rotate(225deg);
+    }
+    @keyframes dropdownOpen {
+        from {
+            opacity: 0;
+            transform: scaleX(0);
+            transform-origin: 0 0;
+        }
+        to {
+            opacity: 1;
+            transform: scaleX(1);
+        }
+    }
+    @keyframes dropdownClose {
+        from {
+            opacity: 1;
+            transform: scaleX(1);
+        }
+        to {
+            opacity: 0;
+            transform: scaleX(0);
+            transform-origin: 0 0;
+        }
+    }
+    .edition-price-filter {
+        margin-bottom: 49px;
+    }
+    .swiper-edition-btns {
+        display: none;
+    }
+    .swiper-edition {
+        padding-left: unset;
+        max-width: 100vw;
+    }
+    .edition-swiper {
+        box-sizing: border-box;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-column-gap: 30px;
+        grid-row-gap: 40px;
+        overflow: visible;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .edition-image {
+        padding-bottom: 5px;
+        height: unset;
+    }
+    .edition-check-text::after {
+        bottom: 0;
+        right: 0;
+        top: 14.4px;
+        left: 4.49888888px;
+    }
+    .info-name-price {
+        display: block;
+        margin-bottom: 2px;
+    }
+    .book-name {
+        font-size: 12px;
+    }
+    .book-author {
+        font-size: 12px;
+        margin-bottom: unset;
+        padding-bottom: 30px;
+    }
+    .book-order::before {
+        height: calc(100% + 10px);
+        width: calc(100% + 10px);
+    }
+    .book-order::after {
+        height: calc(100% + 14px);
+        width: calc(100% + 14px);
+    }
+    .author-hide320,
+    .book-name1024 {
+        display: none;
+    }
+    .author-show320,
+    .book-name320 {
+        display: block;
+    }
+    .book-name320 {
+        font-family: 'OpenSans';
+        font-weight: 700;
+        font-size: 12px;
+    }
+    .book-info {
+        position: relative;
+    }
+    .book-price {
+        position: absolute;
+        bottom: 57%;
+        font-size: 12px;
+    }
+    .book-order {
+        font-size: 12px;
+        padding: 9.5px 33px;
+    }
+    .edition-cheking:hover+.edition-check-text {
+        color: var(--color-white)
+    }
+    .edition-cheking:hover+.edition-check-text::before {
+        border-color: var(--color-white);
+    }
+    .edition-cheking:checked+.edition-check-text {
+        color: var(--color-purple);
+    }
+    .edition-cheking:checked+.edition-check-text::before {
+        border-color: var(--color-purple);
+    }
+    .price-field:hover {
+        background-color: rgba(157, 92, 208, 0.5);
+    }
+    .book-order:hover {
+        background-color: transparent;
+        border: 3px solid var(--color-purple);
     }
 }
