--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,9 @@
 /* projects */
 
+.project-text-show320 {
+    display: none;
+}
+
 .projects-title {
     margin-bottom: 24px;
 }
@@ -76,15 +80,30 @@
 }
 
 .slide-projects {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-flow: row nowrap;
+    position: relative;
     height: 150px;
-    filter: grayscale(1);
     cursor: pointer;
     transition: filter .5s ease-in-out;
 }
 
-.projects-image {
-    width: 100%;
-    height: 100%;
+.slide-projects::before {
+    content: '';
+    position: absolute;
+    border: 1px solid #cacaca;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    overflow: visible;
+    z-index: 50;
+}
+
+.project-pic {
+    filter: grayscale(1);
+    opacity: 0.3;
 }
 
 .projects-btn-prev,
@@ -157,8 +176,9 @@
 /* hover focus active */
 
 .project-web-address,
-.tultip__svg {
-    transition: background-color, border, border-bottom;
+.tultip__svg,
+.project-pic {
+    transition: background-color, border, border-bottom, opacity, grayscale;
     transition-duration: .5s;
     transition-timing-function: ease;
 }
@@ -191,10 +211,18 @@
     border-bottom: 1px solid transparent;
 }
 
-.slide-projects:hover,
-.slide-projects:focus,
-.slide-projects:active {
+.slide-projects:hover .project-pic,
+.slide-projects:active .project-pic {
     filter: grayscale(0);
+    opacity: 1;
+}
+
+.slide-projects:active::before {
+    border: 1px solid #9D5CD0;
+}
+
+.slide-projects:focus::before {
+    border: 1px solid #9D5CD0;
 }
 
 @media (max-width:1300px) {
@@ -206,6 +234,9 @@
     }
     .slide-projects {
         height: 128px;
+    }
+    .slide-projects::before {
+        width: calc(100% - 4px)
     }
     .projects-btn-prev::before,
     .projects-btn-next::before {
@@ -220,7 +251,7 @@
 @media (max-width:885px) {
     .projects-info {
         max-width: 660px;
-        margin-bottom: 26px;
+        margin-bottom: 28px;
     }
     .swiper-projects {
         flex-basis: 84.5%;
@@ -241,5 +272,80 @@
     .projects-btn-prev::after,
     .projects-btn-next::after {
         top: 0;
+    }
+}
+
+@media (max-width:650px) {
+    .section-projects {
+        margin-bottom: 52px;
+    }
+    .projects-title {
+        margin-bottom: 16px;
+    }
+    .projects-info {
+        flex-basis: 100%;
+        margin-bottom: 17px;
+        max-width: unset;
+        font-size: 16px;
+        line-height: 32px;
+    }
+    .project-text-hide320 {
+        display: none;
+    }
+    .project-text-show320 {
+        display: inline;
+    }
+    .project-web-address {
+        margin-left: -2px;
+    }
+    .projects-partners {
+        margin-bottom: 15px;
+        font-size: 18px;
+    }
+    .swiper-projects {
+        flex-basis: 67%;
+    }
+    .slide-projects {
+        height: 65px;
+    }
+    /* hover */
+    .tultip__svg:focus {
+        background-color: #9D5CD0;
+        border: 1px solid var(--color-hover);
+    }
+    .tultip__svg:hover {
+        background-color: var(--color-white);
+        border: 1px solid transparent;
+    }
+    .tultip__svg:active {
+        background-color: #9D5CD0;
+        border: 1px solid transparent;
+        stroke: var(--color-white);
+    }
+    .project-web-address:hover {
+        color: var(--color-purple);
+        border-bottom: 1px solid transparent;
+    }
+    .project-web-address:focus {
+        background-color: var(--color-hover);
+        color: var(--color-white);
+        border-bottom: 1px solid transparent;
+    }
+    .slide-projects:hover .project-pic {
+        filter: grayscale(1);
+        opacity: 0.3;
+    }
+    .slide-projects:active .project-pic {
+        filter: grayscale(0);
+        opacity: 1;
+    }
+    .projects-btn-next:hover::after,
+    .projects-btn-prev:hover::after {
+        background-color: rgba(236, 236, 236, 1);
+    }
+    .projects-btn-next:active::after,
+    .projects-btn-prev:active::after {
+        background: var(--color-active);
+        border: 1px solid var(--color-dark);
     }
 }
